--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ header{
   /*Your Code Here*/
   /*Set background-image to header.jpg */
  
-
+  background-image: url('../images/header.jpg');
   grid-column: 1 / -1;  /*Can you explain what this does?*/
   grid-row: 1 / auto;   /*Can you rewrite it?*/
 }
@@ -173,6 +173,8 @@ header p{
   nav{
     padding: 30px 0px;
     /*Your code here:*/
+    vertical-align: middle;
+    text-align: right;
   }
 
   .container{
